--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <i id="add-icon" class="fas fa-plus-circle"></i>
             <form id="add-form" style="display:none">
                 <label for="title">Title</label>
-                <input type="text" id="title" required>
+                <input type="text" id="title" autocomplete="off">
                 <label for="author">Author</label>
-                <input type="text" id="author" required>
+                <input type="text" id="author" autocomplete="off">
                 <label for="pages">Pages</label>
-                <input type="number" id="pages" required>
+                <input type="number" id="pages" autocomplete="off">
                 <span class="read-status" style="position: initial;">
                     <span>Read</span>
                     <label class="switch">
@@ -37,6 +37,12 @@
                 </span>
                 <button id="add-btn">Add</button>
             </form>
+        </div>
+
+        <div class="modal" style="display: none;">
+            <div class="modal-content">
+                Please enter a valid input!
+            </div>
         </div>
 
         <!-- <div class="item-container">
